[package]
name = "ckb-cli-light-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ckb-sdk = { git = "https://github.com/thewawar/ckb-sdk-rust.git", branch = "support-light-client", version = "2.2.0" }
ckb-signer = { git = "https://github.com/thewawar/ckb-cli.git", branch = "support-light-client", version = "0.3.0" }
ckb-types = "0.104.0"
ckb-hash = "0.104.0"
ckb-jsonrpc-types = "0.104.0"
clap = { version = "4.0.8", features = ["derive"] }
secp256k1 = { version = "0.20", features = ["recovery"] }
serde_json = "1.0.85"
hex = "0.4.3"
