[package]
name = "ckb-cli-light-client"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Linfeng Qian <thewawar@gmail.com>", "Nervos Core Dev <dev@nervos.org>"]
description = "ckb light client command line interface"
keywords = ["ckb", "cli", "ckb-cli", "light", "client"]
homepage = "https://github.com/thewawar/ckb-cli-light-client"
repository = "https://github.com/thewawar/ckb-cli-light-client"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ckb-sdk = "2.3.0"
ckb-signer = "0.3.0"
ckb-types = "0.105.1"
ckb-hash = "0.105.1"
ckb-jsonrpc-types = "0.105.1"
clap = { version = "4.0.8", features = ["derive"] }
secp256k1 = { version = "0.24", features = ["recovery"] }
serde_json = "1.0.85"
hex = "0.4.3"
rpassword = "7.0.0"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
home = "0.5.3"
